--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,19 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:recyclerview-v7:25.2.0'
+    compile 'com.android.support:cardview-v7:25.2.0'
+    compile 'com.github.nitrico.lastadapter:lastadapter:1.2.3'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile 'gun0912.ted:tedpermission:1.0.0'
 }
