--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.github.nitrico.lastadapter:lastadapter:1.2.3'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'gun0912.ted:tedpermission:1.0.0'
+    compile 'com.roughike:bottom-bar:2.3.0'
 }
