[Activity] Add Activities
AuthActivity - 로그인, 회원가입
TutorialActivity - 튜토리얼
NotificationActivity - 알림
AccountActivity - 계정
SetFavoriteCategoryActivity - 주제선정
HistoryActivity - 탐색기록
FavoriteCardlineActivity - 마음에 든 뉴스 보기
NewCardActivity - 새로운 카드뉴스 제작
CardEditorActivity - 카드뉴스 제작, 편집
EditorPageSettingsActivity - 에디터 페이지 설정
EditorPageViewActivity - 에디터 페이지 보기
EDYActivity - 에디
CardlineViewActivity - 카드뉴스 보기
CardlineCommentViewActivity - 카드뉴스 댓글보기

MainActivity - 메인액티비티 (뉴스피드, 스튜디오, 내 에디터 페이지, 더보기 포함)
* NewsFeedFragment - 뉴스피드
* MyEditorFragment - 내 에디터 페이지
* SettingsFragment - 더보기
* CardlineStudioFragment - 스튜디오

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.AuthActivity" />
+        <activity android:name=".activity.TutorialActivity" />
+        <activity android:name=".activity.NotificationActivity" />
+        <activity android:name=".activity.AccountActivity" />
+        <activity android:name=".activity.SetFavoriteCategoryActivity" />
+        <activity android:name=".activity.HistoryActivity" />
+        <activity android:name=".activity.FavoriteCardlineActivity" />
+        <activity android:name=".activity.NewCardActivity" />
+        <activity android:name=".activity.CardEditorActivity" />
+        <activity android:name=".activity.EditorPageSettingsActivity" />
+        <activity android:name=".activity.EditorPageViewActivity" />
+        <activity android:name=".activity.EDYActivity" />
+        <activity android:name=".activity.CardlineViewActivity" />
+        <activity android:name=".activity.CardlineCommentViewActivity"></activity>
     </application>
 
 </manifest>
