--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,10 @@ dependencies {
     compile 'gun0912.ted:tedpermission:1.0.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.github.rey5137:material:1.2.4'
+    compile 'com.yalantis:ucrop:2.2.0-native'
+    compile 'com.github.QuadFlask:colorpicker:0.0.13'
+    compile 'com.github.ganfra:material-spinner:1.1.1'
+    compile 'com.xw.repo:bubbleseekbar:3.4-lite'
+    compile 'com.github.nitrico.fontbinder:fontbinder:1.0.5'
+
 }
