--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,8 @@ dependencies {
     compile 'com.github.nitrico.lastadapter:lastadapter:2.2.2'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'gun0912.ted:tedpermission:1.0.0'
-    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.google.firebase:firebase-core:10.2.1'
+    compile 'com.google.firebase:firebase-messaging:10.2.1'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.github.rey5137:material:1.2.4'
 }
