--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="kr.edcan.cardline">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".utils.AppController"
         android:allowBackup="true"
@@ -15,14 +16,14 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.MainActivity"></activity>
+        <activity android:name=".activity.AuthActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.AuthActivity" />
         <activity android:name=".activity.TutorialActivity" />
         <activity android:name=".activity.NotificationActivity" />
         <activity android:name=".activity.AccountActivity" />
@@ -38,14 +39,15 @@
         <activity android:name=".activity.EDYActivity" />
         <activity android:name=".activity.CardlineViewActivity" />
         <activity android:name=".activity.CardlineCommentViewActivity" />
-        <activity android:name=".activity.InformationActivity"></activity>
+        <activity android:name=".activity.InformationActivity" />
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
         <activity
             android:name="com.facebook.CustomTabActivity"
-            android:exported="true">`
+            android:exported="true">
+            `
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -55,18 +57,19 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <service
-            android:name=".firebase.CardlineFirebaseInstanceIdService">
+
+        <service android:name=".firebase.CardlineFirebaseInstanceIdService">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-        <service
-            android:name=".firebase.CardlineMessagingService">
+        <service android:name=".firebase.CardlineMessagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+        <activity android:name=".activity.SplashActivity"></activity>
     </application>
 
 </manifest>
