--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,7 @@
             android:value="@string/facebook_app_id" />
 
         <activity android:name=".activity.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".activity.AuthActivity" />
         <activity android:name=".activity.TutorialActivity" />
@@ -38,8 +34,16 @@
         <activity android:name=".activity.EditorPageSettingsActivity" />
         <activity android:name=".activity.EditorPageViewActivity" />
         <activity android:name=".activity.EDYActivity" />
-        <activity android:name=".activity.CardlineViewActivity" />
-        <activity android:name=".activity.CardlineCommentViewActivity" />
+        <activity android:name=".activity.CardlineViewActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.CardlineCommentViewActivity"
+            android:theme="@style/Comment_Style"></activity>
         <activity android:name=".activity.InformationActivity"></activity>
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -59,8 +63,7 @@
         </activity>
         <activity
             android:name=".activity.EditorMainActivity"
-            android:theme="@style/NoActionBarTheme">
-        </activity>
+            android:theme="@style/NoActionBarTheme"></activity>
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
